--- a/Survey form/index.html
+++ b/Survey form/index.html
@@ -7,7 +7,7 @@
 		<title>Employee Survey Form</title>
 	</head>
 	<body>
-		<header>
+		<header id="head-id">
 			<h1 id="title">Employee Survey Form</h1>
 			<p id="description">Thank you for taking the time to take the survey</p>
 		</header>
