Portfolio Page Completed

--- a/Personal Portfolio Webpage/index.html
+++ b/Personal Portfolio Webpage/index.html
@@ -4,9 +4,83 @@
     <link rel="stylesheet" href="./styles.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Anton%7CBaskervville%7CRaleway&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <title>My Portfolio Page</title>
 </head>
 <body>
-    
+    <header>
+        <nav id="navbar">
+            <ul class="nav-list">
+                <li>
+                    <a class="nav-link" href="#welcome-section"> About </a>
+                </li>
+                <li>
+                    <a class="nav-link" href="#projects"> Projects </a>
+                </li>
+                <li>
+                    <a class="nav-link" href="#contacts"> Contact </a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="welcome-section">
+            <h1>Hi, My name is Omer Farooq.<br> I am a Web Developer.</h1>
+            <p>
+                " I am self motivated person, always looking for opportunities <br>
+                to challenge myself to gain extra knowledge and new skills. <br>
+                I am creative, passionate and goal oriented person. <br>
+                Love working on creative projects. " 
+            </p>
+        </section>
+        <section id="projects">
+            <h1>
+                Here are some of my projects
+            </h1>
+            <div class="projects-grid">
+                <a href="https://github.com/omerfarooq789/FreeCodeCamp-Certification-Projects-Responsive-Web-Design/tree/main/Tribute%20page" target="_blank" class="project-tile">
+                    <img src="https://i.ibb.co/tbQjQPt/Tribute-page.png" alt="Project" class="project-img">
+                    <p class="project-title">
+                        Tribute Page
+                    </p>
+                </a>
+                <a href="https://github.com/omerfarooq789/FreeCodeCamp-Certification-Projects-Responsive-Web-Design/tree/main/Technical%20Document%20Page" target="_blank" class="project-tile">
+                    <img src="https://i.ibb.co/0271XNB/j-Query-Document-Page.png" alt="Project" class="project-img">
+                    <p class="project-title">
+                        jQuery Document Page
+                    </p>
+                </a>
+                <a href="https://github.com/omerfarooq789/FreeCodeCamp-Certification-Projects-Responsive-Web-Design/tree/main/Survey%20form" target="_blank" class="project-tile">
+                    <img src="https://i.ibb.co/ZSjd5Mx/survey.png" alt="Project" class="project-img">
+                    <p class="project-title">
+                        Survey Form
+                    </p>
+                </a>
+            </div>
+            <a href="https://github.com/omerfarooq789/FreeCodeCamp-Certification-Projects-Responsive-Web-Design" class="see-more" target="_blank">See More <i class="fas fa-chevron-right"></i></a>
+        </section>
+        <section id="contacts">
+            <h1> You can Hire me for any project you might have </h1>
+            <p>Lets work together</p>
+            <div class="contacts-links">
+                <a href="https://www.facebook.com/freecodecamp/" target="_blank" id="profile-link">
+                    <i class="fab fa-facebook-f"></i> Facebook
+                </a>
+                <a href="https://twitter.com/freecodecamp/" target="_blank" id="profile-link">
+                    <i class="fab fa-twitter"></i> Twitter
+                </a>
+                <a href="https://instagram.com/freecodecamp" target="_blank" id="profile-link">
+                    <i class="fab fa-instagram"></i> instagram
+                </a>
+                <a href="https://www.linkedin.com/school/free-code-camp/" target="_blank" id="profile-link">
+                    <i class="fab fa-linkedin-in"></i> Linkedin
+                </a>
+                <a href="https://github.com/freecodecamp" target="_blank" id="profile-link">
+                    <i class="fab fa-github"></i> Github
+                </a>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
